@@ -1,0 +1,16 @@
+/*
+ *
+ * K.D.Hedger 2013 <kdhedger68713@gmail.com>
+ *
+ * functioncallbacks.cpp
+ *
+*/
+
+#include <gtk/gtk.h>
+#include <gtksourceview/gtksourceiter.h>
+#include <unique/unique.h>
+
+#include "globals.h"
+#include "files.h"
+#include "guis.h"
+
